<resources>
    <string name="app_name" translatable="false">Synthronome</string>
    <string name="notification_title">Synthronome is running</string>
    <string name="notification_text">Press to stop</string>
    <string name="notification_channel_name" translatable="false">@string/app_name</string>
    <string name="notification_channel_description">Show notification while metronome is running</string>
    <string name="main_button_bookmarks">Bookmarks</string>
    <string name="main_button_training">Training</string>
    <string name="main_button_tap" translatable="false">Tap</string>
    <string name="main_bpm" translatable="false">BPM: %d</string>
    <string name="main_time_signature">Time signature: %d</string>
    <string name="training_is_in_progress">Training is in progress</string>
    <string name="training_completion_percent" translatable="false">%d%%</string>

    <string name="training_choose_type_title">Choose training type</string>

    <string name="training_topLevelType_tempoChange">Tempo change</string>
    <string name="training_topLevelType_barDropping">Bar muting</string>
    <string name="training_topLevelType_beatDropping">Click muting</string>
    <string name="training_finalType_tempoChange_byBars">By bars</string>
    <string name="training_finalType_tempoChange_byTime">By time</string>
    <string name="training_finalType_barDropping_randomly">Randomly</string>
    <string name="training_finalType_barDropping_byValue">By value</string>

    <string name="training_tempoChange_startBpm">Start tempo (BPM)</string>
    <string name="training_tempoChange_endBpm">End tempo (BPM)</string>
    <string name="training_tempoChange_increaseOn">Change on (BPM)</string>
    <string name="training_tempoChange_everyBars">Every (bars)</string>
    <string name="training_tempoChange_everySeconds">Every (seconds)</string>
    <string name="training_barDropping_chance">Bar muting chance (%)</string>
    <string name="training_barDropping_ordinaryBarsCount">Ordinary bars</string>
    <string name="training_barDropping_mutedBarsCount">Muted bars</string>
    <string name="training_beatDropping_chance">Beat muting chance (%)</string>
    <string name="training_btn_start">Start training</string>

    <string name="settings_sound_preset">Sound preset</string>
    <string name="settings_flash">Flash</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_primary_color">Primary color</string>
    <string name="settings_background_color">Background color</string>

    <string name="color_picker_dialog_title">Choose a color</string>
    <string name="color_picker_dialog_button_ok">Apply</string>

    <string name="bookmarks_clear_all">Clear</string>
    <string name="bookmarks_empty_list">You can bookmark the current metronome settings on the main screen</string>
</resources>